--- a/css/contact.css
+++ b/css/contact.css
@@ -3,6 +3,7 @@ body {
     min-height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
+    overflow-x: hidden;
     background-image: url('../photos/contactphotobackground.webp');
     background-size: cover;
     background-position: center;
